--- a/src/scss/emailInput.scss
+++ b/src/scss/emailInput.scss
@@ -26,11 +26,12 @@
             font-size: 12px;
             padding: 5px 7px;
             border-radius: 3px;
-            margin-right: 3px;
+            margin: auto 3px auto 0;
 
             .fa-times {
                 visibility: hidden;
-                margin-left: 3px;
+                margin: auto 2px auto 6px;
+                position: relative;
             }
 
             &:hover {
